--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 		<meta id="view" name="viewport" content="width=device-width, maximum-scale=1.0, minimum-scale=1.0, initial-scale=1">
 		<title>Creating a Countdown</title>
 		<link rel="stylesheet" type="text/css" href="my_countdown.css">
+
+		<script type="text/javascript" src="js/jquery-2.1.3.min.js"></script>
+		<script type="text/javascript" src="js/jquery.plugin.min.js"></script>
+		<script type="text/javascript" src="js/jquery.countdown.min.js"></script>
 	</head>
 	<body>
 		
