--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
 		<script type="text/javascript" src="js/jquery.countdown.min.js"></script>
 	</head>
 	<body>
+		<div id="world-premiere">
+			<div class="heading">
+				<h2>Countdown to the</h2>
+				<h1>World Premiere</h1>
+			</div>
+			<div class="my-countdown"></div>
+		</div>
 		
 		<!-- markup goes here -->
 
